hourly windspeed gap fixed

--- a/WeatherApp/src/components/styles/HourlyTemp.css
+++ b/WeatherApp/src/components/styles/HourlyTemp.css
@@ -64,6 +64,7 @@
 
   .hourlyTemp {
     height: auto;
+    min-height: 110px;
     border-radius: 1.25rem;
     background: linear-gradient(
       219deg,
